change z-index for correct layering

--- a/src/components/cards/portrait_card/portrait_card.scss
+++ b/src/components/cards/portrait_card/portrait_card.scss
@@ -40,6 +40,8 @@ $ods-portrait-card-image-height-large: 290px;
     @extend %ods-padding-horizontal-5, %ods-padding-bottom-5, %ods-padding-top-0-breakpoint-medium, %ods-padding-horizontal-5-breakpoint-medium, %ods-padding-bottom-5-breakpoint-medium, %ods-padding-top-0-breakpoint-large, %ods-padding-horizontal-5-breakpoint-large, %ods-padding-bottom-8-breakpoint-large;
     @extend %ods-color-bg-gray-light;
 
+    z-index: 2;
+    position: relative;
   }
 
   &__heading {
